<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="background_color_green">#4AA72D</color>
    <color name="background_color_blue">#178ab4</color>
    <color name="background_color">#178ab4</color>
    <color name="black">#282828</color>
    <color name="white">#e5e5e5</color>
    <color name="idk">#f0f1f8</color>
    <color name="blue_light">#33b5e5</color>

    <!-- General -->
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>

    <!-- Main -->
    <string name="play">Play</string>
    <string name="start">Start</string>
    <string name="about">About</string>
    <string name="options">Options</string>
    <string name="stats">Statistics</string>

    <!-- Strings for Preferences -->
    <string name="gameplay_settings">Gameplay Settings</string>
    <string name="difficulty">Difficulty</string>
    <string name="language">Language</string>
    <string name="word_length">Word Length</string>
    <string name="app_options">App Options</string>
    <string name="num_of_guesses">Number of Guesses</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="very_hard">Very Hard</string>
    <string name="word_difficulty">Word Difficulty</string>
    
    <!-- Win dialog -->
    <string name="win">Congratulations, you won!</string>
    <string name="score">Score</string>
    <string name="guesses_bonus">Guessing Bonus</string>
    <string name="guesses_left">Guesses Left: </string>
    <string name="difficulty_bonus">Difficulty Bonus</string>
    <string name="streak">Streak</string>
    <string name="total">Total</string>
    <string name="plus_ten">+10</string>
    <string name="x_two">x2</string>
    <string name="more_options">Options</string>
    

    <!-- GameActivity -->
    <string name="prompt">Enter 1 letter</string>
    <string name="blank"></string>
    <string name="evil_hangman">Evil Hangman</string>
    <string name="icon_description">The evil hangman with a noose</string>
    <string name="lose">Sorry, you lost.</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>
    <string name="new_game">New Game</string>
    <string name="max_word_length_easy">The maximum word length for easy is
        14</string>
    <string name="max_word_length_med">The maximum word length for medium is
        17</string>
    <string name="max_word_length_hard">The maximum word length for hard is
        20</string>

    <!-- Letters -->
    <string name="upper_a">A</string>
    <string name="upper_b">B</string>
    <string name="upper_c">C</string>
    <string name="upper_d">D</string>
    <string name="upper_e">E</string>
    <string name="upper_f">F</string>
    <string name="upper_g">G</string>
    <string name="upper_h">H</string>
    <string name="upper_i">I</string>
    <string name="upper_j">J</string>
    <string name="upper_k">K</string>
    <string name="upper_l">L</string>
    <string name="upper_m">M</string>
    <string name="upper_n">N</string>
    <string name="upper_o">O</string>
    <string name="upper_p">P</string>
    <string name="upper_q">Q</string>
    <string name="upper_r">R</string>
    <string name="upper_s">S</string>
    <string name="upper_t">T</string>
    <string name="upper_u">U</string>
    <string name="upper_v">V</string>
    <string name="upper_w">W</string>
    <string name="upper_x">X</string>
    <string name="upper_y">Y</string>
    <string name="upper_z">Z</string>
    <string name="app_name">Evil Hangman</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>