<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/black" >

    <TextView
        android:id="@+id/sorry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:text="@string/lose"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />
    
    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/sorry"
        android:background="@color/background_color" />
    
	<Button
        android:id="@+id/button_more_options"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/divider"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/more_options" />
    
    <Button
        android:id="@+id/button_play_again"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/center"
        android:layout_below="@+id/button_more_options"
        android:text="@string/play_again" />

    <Button
        android:id="@+id/button_main_menu"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/center"
        android:layout_below="@+id/button_more_options"
        android:text="@string/main_menu" />

</RelativeLayout>